# annaheim

./: .env  .eslintrc.json  .gitignore  .gitmodules  0.69  README.md  elsint.config.js  eslint.config.js  eslint.config.mjs  jest.config.js  log.tzc  nx.json  package-lock.json  package.json  pnpm-lock.back.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  tsconfig.json
.ssh/: gatekey.ps1
AnA/: README.md  package-lock.json
AnA/anchor/: Anchor.toml
AnA/anchor/src/: AnA-exports.ts  index.ts
AnA/anchor/tests/: AnA.spec.ts
AnA/src/app/: layout.tsx
anaheim/: package-lock.json  package.json
anchor/: Anchor.toml  Cargo.toml  cfg.tzc
anchor/programs/ana/: Cargo.toml
anchor/programs/ana/src/: lib.rs
anchor/programs/anaheim/: Cargo.toml
anchor/programs/anaheim/src/: core.rs  lib.bk.rs  lib.rs  post.rs  user.rs
anchor/programs/anahellmsub/: Cargo.toml
anchor/programs/anahellmsub/src/: lib.rs
anchor/programs/anarco_world/: Cargo.toml
anchor/programs/anarco_world/src/: lib.rs
anchor/programs/anna_heim/: Cargo.toml
anchor/programs/anna_heim/src/: lib.rs
anchor/programs/annaheim/: Cargo.toml
anchor/programs/annaheim/src/: lib.rs
anchor/programs/journal/: Cargo.toml
anchor/programs/journal/src/: lib.rs
anchor/programs/non-custodial-escrow/: Anchor.toml  Cargo.toml
anchor/programs/non-custodial-escrow/src/: lib.rs
anchor/programs/onchain-voting/: Cargo.toml
anchor/programs/onchain-voting/src/: lib.rs
anchor/programs/self-custodial-facebook/: Cargo.toml
anchor/programs/self-custodial-facebook/src/: accounts.rs  instructions.rs  lib.rs  lib.rs.singlefile  state.rs
anchor/src/: ana-exports.ts  anaheim-exports.ts  anahellmsub-exports.ts  annaheim-exports.ts  index.ts
anchor/src/app/: layout.tsx
anchor/src/components/annaheim/: annaheim-data-access.tsx  annaheim-feature.tsx
anchor/tests/: ana.spec.ts  anaheim.spec.ts  anaheim.spec.tsx  anaheim.tsx  anahellmsub.spec.ts  annaheim.spec.ts  instructions.ts  rpc.ts
lib/: db.js
prisma/: schema.prisma  test_pg.js
prisma/anarcrypt-db-bacl/: anarcrypt_backup.dump  anarcrypt_backup.sql  anarcrypt_data.sql  anarcrypt_final_backup.sql  anarcrypt_schema.sql  updated_backup.sql
scripts/governance-sdk/: .gitignore  README.md  package.json  spl-governance-data.js  spl-governance-rpc-connect.js  tsconfig.json  tsup.config.ts 
src/: .eslintrd.js
src/app/: layout.tsx  react-query-provider.tsx
src/app/ana/: page.tsx
src/app/anaheim/: page.tsx
src/app/anahellmsub/: page.tsx
src/app/anna_heim/: page.tsx
src/app/annaheim/: page.tsx
src/app/api/: users.js
src/app/feed/: page.tsx
src/components/account/: account-ui.tsx
src/components/ana/: ana-data-access.tsx  ana-feature.tsx  ana-ui.tsx
src/components/anaheim/: anaheim-data-access.tsx  anaheim-feature.bk.tsx  anaheim-feature.tsx  anaheim-ui.tsx  environment.tsx
src/components/anahellmsub/: anahellmsub-data-access.tsx  anahellmsub-feature.tsx  anahellmsub-ui.tsx
src/components/anna_heim/: anna_heim-data-access.tsx  anna_heim-feature.tsx  anna_heim-ui.tsx
src/components/annaheim/: annaheim-data-access.tsx  annaheim-ui.tsx
src/components/civicauth/: civicauthprovider.js  createcivicauthplugin.js
src/components/cluster/: cluster-data-access.tsx  cluster-ui.tsx
src/components/feed/: feed-data-access.tsx  feed-ui.tsx  new-post-feature.tsx
src/components/idl/: anaheim.json  idl.json
src/components/solana/: solana-provider.tsx
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-BSTf2DQUbRKmfbLuGirLegGJ9i4Uod5r2H25Ebr2WnP4.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1740745973777261  MANIFEST-000021
(+27 files in other folders)
