[workspace]
members = [
    "programs/ana",
    "programs/anarco_world",
    "programs/anna_heim",
    "programs/non-custodial-escrow",
    "programs/onchain-voting",
    "programs/self-custodial-facebook"
    ]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
