[workspace]
members = [
    "programs/anarco_world",
    "programs/annaheim",
    "programs/journal",
    "programs/non-custodial-escrow",
    "programs/onchain-voting",
    "programs/self-custodial-facebook",
    "programs/governance/programs/gateway",
    "programs/governance/programs/quadratic",
    "programs/governance/programs/realm-voter",
    "programs/governance/programs/nft-voter",
    "programs/governance/programs/bonk-plugin",
    "programs/governance/programs/token-haver",
    "programs/governance/programs/token-voter"
]
resolver = "2"
edition = "2021"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
