[workspace]
members = [
    "programs/anarco_world",
    "programs/annaheim",
    "programs/journal",
    "programs/non-custodial-escrow",
    "programs/onchain-voting",
    "programs/self-custodial-facebook",
    "programs/governance-lib/programs/gateway",
    "programs/governance-lib/programs/quadratic",
    "programs/governance-lib/programs/realm-voter",
    "programs/governance-lib/programs/nft-voter",
    "programs/governance-lib/programs/bonk-plugin",
    "programs/governance-lib/programs/token-haver",
    "programs/governance-lib/programs/token-voter"
]
resolver = "2"
edition = "2021"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
