[package]
name = "anna_heim"
version = "6.6.6"
description = "Created with Anarchanchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "anna_heim"

[features]
default = ["ico", "webp"]
bmp = []
png = []
ico = ["bmp", "png"]
webp = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
